@@ -42,7 +42,7 @@ bind "Esc" "quit"
 bind " " "scroll 'forward'"
 bind '"' "scale 'shadow';i:fresh=1;redisplay;"
 bind "$" "$;"
-bind "'" "goto _lastfileindex"
+bind "'" "goto _lastfileindex.'f'.(_lastpageindex+1).'p'"
 bind "(" "goto '^p'"
 bind ")" "goto '$p'"
 bind "*" "_display_console=0;toggleVerbosity;echo i:*"
